--- a/www/templates/buses.html
+++ b/www/templates/buses.html
@@ -3,7 +3,7 @@
   <br/>
     <div class="row" ng-repeat="item in [1,2,3,4,5,6,7]">
       <div class="col col-100">
-        <img ng-src="img/horarios/buses/{{item}}.PNG" style="width:100%"></img>
+        <img ng-src="img/buses/{{item}}.PNG" style="width:100%"></img>
       </div>
     </div>
 </ion-view>
